--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint --ext .js,.astro src",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "astro": "^2.5.5"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.41.0",
     "eslint-plugin-astro": "^0.27.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.9.1"
   }
