--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "astro": "^2.5.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.41.0",
     "eslint-plugin-astro": "^0.27.1",
