--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "astro": "^2.5.5"
+    "@astrojs/image": "^0.16.9",
+    "astro": "^2.5.5",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
