--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.16.9",
+    "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.5.5",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
