--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.16.9",
+    "@astrojs/sitemap": "^1.3.2",
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.5.5",
     "sharp": "^0.32.1",
