--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@astrojs/sitemap": "^1.3.2",
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.5.5",
+    "astro-robots-txt": "^0.5.0",
     "sharp": "^0.32.1",
     "tailwindcss": "^3.0.24"
   },
